<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.gbecalculator.main.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_intent" android:id="@+id/textView"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>


    <TableLayout android:layout_width="match_parent" android:layout_height="match_parent"
                 android:layout_below="@+id/textView" android:background="@color/colorBackTableLayout">

        <TableRow>
            <TextView android:gravity="left" android:text="@string/weaponFlare" style="@style/WeaponText"/>
            <Spinner android:id="@+id/spinnerFlare" android:entries="@array/weaponsNumber"></Spinner>

        </TableRow>
        <TableRow>
            <TextView android:gravity="left" android:text="@string/weaponSmokeScreen" style="@style/WeaponText"/>
            <EditText android:gravity="right"/>
        </TableRow>
        <TableRow>
            <TextView android:gravity="left" android:text="@string/weaponShockBomb" style="@style/WeaponText"/>
            <EditText android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView android:gravity="left" android:text="@string/weaponBarrage" style="@style/WeaponText"/>
            <EditText android:gravity="right"/>
        </TableRow>
        <TableRow>
            <TextView android:gravity="left" android:text="@string/weaponArtillery" style="@style/WeaponText"/>
            <EditText android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView android:gravity="left" android:text="@string/weaponMedKit" style="@style/WeaponText"/>
            <EditText android:gravity="right"/>
        </TableRow>

        <TableRow android:layout_width="match_parent">
            <Button android:text="@string/btnResetAll" android:layout_width="wrap_content" android:gravity="center"
                    android:id="@+id/button"/>
        </TableRow>

        <TableRow>
            <TextView android:gravity="left" android:text="@string/weaponTotalCount" style="@style/WeaponText"/>
            <EditText android:gravity="right"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>
